# aikitchen

./: .gitignore  README.md  _config.yml  about.md  index.md  papers.md  pyproject.toml  resources.md
_posts/: 2025-02-15-DSPY.md  2025-02-16-metaprompting  2025-02-16-metaprompting.md
aikitchen/helpers/: demo_api.py  demo_specs.json
aikitchen/promptflow/run_python_dagflow/: data.jsonl  run.yaml  run_pf.py
books/: README.md
code/: README.md
code/promptflow/: README.md
code/promptflow/pf_first/: README.md  flow.dag.yaml  ollama_api_call.py  qa_prompt.jinja2  run.yaml  run_pf.py
code/test/: test.ipynb
